2002-09-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-group.c (nr_arena_group_update): Multiply
	with group second transformation

	* src/display/nr-arena-group.h: Added child_affine member

	* src/sp-root.c (sp_root_read_attr): Use NRMatrixD for viewbox
	(sp_root_show): Implement, apply viewBox
	(sp_root_bbox): Ditto
	(sp_root_print): Ditto

	* src/sp-item.c (sp_item_i2doc_affine): Apply viewBox

2002-09-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/png-write.c (sp_png_get_block_stripe): Helper
	(sp_png_write_rgba): Use striped writer
	(sp_png_write_rgba_striped): New method

	* src/dialogs/export.c (sp_export_get_rows): Renderer
	(sp_export_do_export): Use striped exporter

	* src/file.c: Added <time.h> - Thanks to Masatake for finding it

2002-09-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-image.c (nr_arena_image_render): Use libnr
	transformed composition methods

	* src/libnr/nr-compose-transform.c: New file

	* src/libnr/nr-compose-transform.h: New file

2002-09-15  Masatake YAMATO  <jet@gyve.org>

	* src/toolbox.c (sp_maintoolbox_drag_data_received): made
	it a static scoped function.
	(sp_maintoolbox_create): Connected sp_maintoolbox_drag_data_received
	to maintoolbox. (glade based version is obsoleted.)

	* src/toolbox.c (sp_maintoolbox_drag_data_received): removed 
	declaration.

2002-09-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/file.c (sp_file_save_as): Added "file type" optionmenu
	(sp_file_save_type_activate): Helper
	(file_save_ok): Save plain SVG if needed

	* src/sp-namedview.c (sp_namedview_write): Implement

	* src/sp-text.c (sp_text_write): Implement

	* src/sp-use.c (sp_use_write): implement

	* src/sp-root.c (sp_root_write): Implement

	* src/sp-polyline.c (sp_polyline_write): Implement

	* src/sp-line.c (sp_line_write): Implement

	* src/sp-image.c (sp_image_write): Implement

	* src/sp-gradient.c (sp_stop_write): Implement

	* src/sp-defs.c (sp_defs_write): Implement
